--- a/Project1.html
+++ b/Project1.html
@@ -40,16 +40,21 @@
 						<div class="image">
 							<img src="images/ddMenu.jpg" alt="" />
 						</div>
+						<p>SUMMARY </p>
+			<p>
+			Danger Dwarves is a top-down multiplayer rpg inspired by Diablo. 
+			Play solo / offline / or with a group of friends and clear dungeons together or just chill / pvp in the ingame hub. Gain strength by killing mobs, upgrading your gear and exploring dungeons. The game's combat system is focused around primary and secondary attacks and features a randomized loot and item system.</p>		
+
 						<p>My work</p>
-						<p>Danger dwarves is the project im working on at the moment. Im one of the two programmers.
-						I Work mostly on backend programming like the item systems and inventory. Aswell as the saving and loading proces.
-My group and i are working really hard to finish the project.</p>
+						<p>Danger dwarves is a multiplayer game i made with a small group of students. Im one of the two programmers.
+							I Worked mostly on back-end programming like the item systems and inventory. Aswell as the saving and loading proces.
+							The items in the game were randomized from the stats to the apearance. With a database with all the possible names it could get.
+							The inventory is an inventory with an hotbar and equipment slots
+
+							Your progress was saved when you exit the game. and you can have as many save files as you want.
+							</p>
 						<p></p>
-						<p>
-SUMMARY </p>
-<p>
-Danger Dwarves is a top-down multiplayer rpg inspired by Diablo. 
-Play solo / offline / or with a group of friends and clear dungeons together or just chill / pvp in the ingame hub. Gain strength by killing mobs, upgrading your gear and exploring dungeons. The game's combat system is focused around primary and secondary attacks and features a randomized loot and item system.</p>					
+									
 					<li><a href="https://github.com/VeraGerritse/DangerDwarves">Press here to go to the Github Project</a></li>
 
 					</div>
