--- a/Project1.html
+++ b/Project1.html
@@ -45,17 +45,19 @@
 			Danger Dwarves is a top-down multiplayer rpg inspired by Diablo. 
 			Play solo / offline / or with a group of friends and clear dungeons together or just chill / pvp in the ingame hub. Gain strength by killing mobs, upgrading your gear and exploring dungeons. The game's combat system is focused around primary and secondary attacks and features a randomized loot and item system.</p>		
 
-						<p>My work</p>
+						<p>MY WORK</p>
 						<p>Danger dwarves is a multiplayer game i made with a small group of students. Im one of the two programmers.
 							I Worked mostly on back-end programming like the item systems and inventory. Aswell as the saving and loading proces.
+							<br>
 							The items in the game were randomized from the stats to the apearance. With a database with all the possible names it could get.
+							<br>
 							The inventory is an inventory with an hotbar and equipment slots
-
+							<br>
 							Your progress was saved when you exit the game. and you can have as many save files as you want.
 							</p>
 						<p></p>
 									
-					<li><a href="https://github.com/VeraGerritse/DangerDwarves">Press here to go to the Github Project</a></li>
+					<li><a href="https://github.com/VeraGerritse/DangerDwarves/tree/master/Y3P1/Assets/Scripts/Vera">Press here to go to the Github Project and the code work</a></li>
 
 					</div>
 				</div>
