--- a/Project2.html
+++ b/Project2.html
@@ -44,11 +44,24 @@
 						<div class="image">
 							<img src="images/sb.jpg" alt="" />
 						</div>
-						<p>Skullbound was a project i worked on last year. I was lead developer on the project</p>
-						<p>Included is a random dungeon generator, A* pathfinder, AI, maps and more</p>
+						<p>SUMMARY </p>
+			<p>
+			SkullBound is a singleplayer dungeon crawler.
+			You fight through rooms filled with skeletons and other monsters. With an end boss at the end of every floor</p>		
+
+						<p>MY WORK</p>
+						<p>
+						I've worked on skullbound for 10 weeks with a small group of students. I was the lead programmer.
+						i am responsible for most of the programming.
+						i worked on the dungeon generation,
+						a mini map where you can see where you have been,
+						an A* pathfinder for the AI,
+						the leveling through floors, and the code behind the UI.
+
+						</p>
 						<p></p>
 					
-					<li><a href="https://github.com/VeraGerritse/SkullBound">Github Project</a></li>
+					<li><a href="https://github.com/VeraGerritse/Skullbound/tree/master/Development%20Lab%201%20LJ2%20P3/Assets/Vera/Scripts">Press here to go to the Github Project and the code work</a></li>
 
 					</div>
 				</div>
