--- a/Project3.html
+++ b/Project3.html
@@ -44,11 +44,11 @@
 						<div class="image">
 							<img src="images/ggjMenu.jpg" alt="" />
 						</div>
-						<p>We participated in the Global Game Jam where we participated in a school competition in groningen.</p>
+						<p>We participated in the Global Game Jam where we participated in a school competition in Groningen.</p>
 						<p>We won the best game award and the teams choice award</p>
 						<p>i mostly did the 2d art for this project. but i also did some of the programming</p>
 					
-					<li><a href="https://github.com/VeraGerritse/GGJ">Github Project</a></li>
+					<li><a href="https://github.com/VeraGerritse/GGJ">Press here to go to the Github Project and the code work</a></li>
 
 					</div>
 				</div>
