--- a/aboutMe.html
+++ b/aboutMe.html
@@ -39,7 +39,16 @@
 						<div class="image">
 							<img src="images/me01.jpg" alt="" />
 						</div>
-						<p>Welcome, my name is Vera Gerritse. I'm 21 years old, and studying Game development at Deltion college and im in the third year at the moment.</p>
+						<p>Welcome, my name is Vera Gerritse. I'm 21 years old, and studying Game development at Deltion college and im in the third year at the moment. i mostly do back end programming</p>
+						<p>Skills i have include:</p>
+						<p>
+							C# programming (Room generation, pathfinder, inventory system, item systems, )
+							<br>
+							Unity implementation
+							<br>
+
+						</p>
+
 						<p></p>
 						<div class="col-4"><span class="image fit"><img src="images/pic01.png" alt="" /></span></div>
 					</header>					
